<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="206dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/main_image"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="190dp"
                    android:layout_gravity="right|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:gravity="right"
                        android:textSize="16sp"
                        android:text="@string/ta_dabestan" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="@android:color/white"
                        android:gravity="right"
                        android:textSize="9sp"
                        android:text="@string/subtitle_moraghebat_kodak" />

                </LinearLayout>

            </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="48dp">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="@dimen/button_submit_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_textview_margin">
        <android.support.v7.widget.AppCompatEditText android:id="@+id/activity_login_username"
            android:layout_width="@dimen/button_submit_width"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/activity_login_username"
            android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name2"
            android:layout_width="@dimen/button_submit_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_textview_margin">
        <android.support.v7.widget.AppCompatEditText android:id="@+id/activity_login_password"
            android:layout_width="@dimen/button_submit_width"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/activity_login_password"
            android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/activity_login_submit"
            android:layout_width="@dimen/button_submit_width"
            android:layout_height="@dimen/button_submit_height"
            android:text="@string/login_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/submit_button_textsize"
            android:theme="@style/greenColorButton"
            fontPath="@string/iran_sans_bold"/>

    </LinearLayout>
        </LinearLayout>
</ScrollView>
</LinearLayout>