<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".NewChild"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/hero_top"
                    android:adjustViewBounds="true"
                    />
            </FrameLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/home_page_createnew"
                android:layout_width="match_parent"
                android:layout_height="@dimen/homepage_cardview_height"
                android:background="@android:color/white"
                android:layout_marginTop="@dimen/homepage_cardview_margintop"
                android:layout_marginRight="@dimen/homepage_cardview_margin"
                android:layout_marginLeft="@dimen/homepage_cardview_margin"
                android:layout_marginBottom="@dimen/homepage_cardview_margin">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="@dimen/homepage_circle_diameter"
                        android:layout_height="@dimen/homepage_circle_diameter"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="@dimen/home_circle_right_margin"
                        android:src="@drawable/circle_image_green"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="@dimen/card_image_margin_right"
                        android:src="@drawable/ic_person_add_white_24dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right|center_vertical"
                        android:layout_marginRight="@dimen/child_contact_text_marginright"
                        android:textColor="@color/secondary_text"
                        android:text="@string/new_file_create"
                        android:layout_gravity="right|center_vertical"/>
                </FrameLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/home_page_revisit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/homepage_cardview_height"
                android:background="@android:color/white"
                android:layout_margin="@dimen/homepage_cardview_margin">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                    android:layout_width="@dimen/homepage_circle_diameter"
                    android:layout_height="@dimen/homepage_circle_diameter"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/home_circle_right_margin"
                    android:src="@drawable/circle_image_blue"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/card_image_margin_right"
                    android:src="@drawable/ic_folder_shared_white_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/child_contact_text_marginright"
                    android:textColor="@color/secondary_text"
                    android:text="@string/revisit"
                    android:gravity="right|center_vertical"
                    android:layout_gravity="right|center_vertical"/>
                </FrameLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/homepage_cardview_height"
                android:background="@android:color/white"
                android:layout_margin="@dimen/homepage_cardview_margin">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/home_page_process">
                    <ImageView
                        android:layout_width="@dimen/homepage_circle_diameter"
                        android:layout_height="@dimen/homepage_circle_diameter"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="@dimen/home_circle_right_margin"
                        android:src="@drawable/circle_image_orange"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="@dimen/card_image_margin_right"
                        android:src="@drawable/ic_insert_chart_white_24dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right|center_vertical"
                        android:layout_marginRight="@dimen/child_contact_text_marginright"
                        android:textColor="@color/secondary_text"
                        android:text="@string/see_proccess"
                        android:layout_gravity="right|center_vertical"/>
                </FrameLayout>
        </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>